--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
+    "@testing-library/react": "^11.0.4",
     "@types/enzyme": "^3.10.6",
     "@types/jest": "^26.0.14",
     "@types/react": "^16.9.49",
@@ -22,6 +23,7 @@
     "babel-jest": "^26.3.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.4",
+    "enzyme-to-json": "^3.5.0",
     "eslint": "^7.9.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
@@ -37,6 +39,8 @@
   },
   "scripts": {
     "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "lint": "eslint './src/**/*.{ts,tsx}' './spec/**/*.{ts,tsx}' --quiet",
     "dev": "parcel ./src/index.html",
     "build": "parcel build ./src/index.html"
