--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "acorn": "^8.0.1",
     "classnames": "^2.2.6",
     "react": "^16.13.1",
+    "react-currency-input": "^1.3.6",
     "react-dom": "^16.13.1",
     "styled-components": "^5.2.0"
   },
